Support development multiple projects on same network

--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,26 @@
-DB_HOST=db:3306
-DB_PASSWORD=wordpress
-DB_USERNAME=wordpress
+# https://hub.docker.com/_/mysql/
+DB=mysql:5.7
+DB_HOST=mysql
+DB_NAME=wordpress
+DB_ROOT_PASSWORD=root
+
+# https://hub.docker.com/_/wordpress/
+WP=wordpress:php7.1
+
+#############################################################################
 
 WPSITE_TITLE=Sage 8 Starter
-WPSITE_URL=sage8.test
-# WPSITE_PORT=8080
+WPSITE_DESC=Make Wordpress Theme Development Great Again
+WPSITE_URL=sage8.localhost
+# WPSITE_PORT=8888
+WPSITE_THEME_NAME=sage8
+
+#############################################################################
 
 WPSITE_ADMIN_USER=admin
 WPSITE_ADMIN_PASSWORD=admin
-WPSITE_ADMIN_EMAIL=admin@sage8.test
+WPSITE_ADMIN_EMAIL=admin@sage8.localhost
 
-WPSITE_THEME_NAME=sage8
+WPSITE_EDITOR_USER=editor
+WPSITE_EDITOR_PASSWORD=editor
+WPSITE_EDITOR_EMAIL=editor@sage8.localhost
