--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
 
   wordpress:
-    restart: always
+    # restart: always
     image: ${WP}
     volumes:
       - "./configs/php.ini:/usr/local/etc/php/conf.d/php.custom.ini:ro"
